--- a/story.html
+++ b/story.html
@@ -79,7 +79,6 @@
       font-size: clamp(1rem, 1.4vw, 1.6rem);
       cursor: pointer;
       transition: 0.3s;
-      border-radius: 8px;
       margin-top: 1rem;
     }
 
@@ -262,7 +261,7 @@
     function checkPassword() {
       const input = document.getElementById("passwordInput").value.trim();
       const error = document.getElementById("loginError");
-      if (input === "shuchingshih") {
+      if (input === "ilove808") {
         document.getElementById("loginScreen").style.display = "none";
         document.getElementById("startScreen").style.display = "block";
         error.style.display = "none";
