--- a/info.html
+++ b/info.html
@@ -84,6 +84,7 @@
       font-size: clamp(1rem, 1.3vw, 1.4rem);
       color: #ffcccc;
       text-shadow: 0 0 8px #600000;
+      text-align: left;
     }
 
     .buttons {
@@ -201,10 +202,18 @@
 
   <div class="info">
     <h3>⚠️ 鬼屋基本資料</h3>
-    <p>📍 地點：8年8班教室（4樓過八角亭後左轉第4間教室）</p>
-    <p>🕐 開放時間：11月15日（校慶日）</p>
-    <p>💰 入場費：50元</p>
-    <p>📞 聯絡方式：8年8班電話 分機808 或 現場服務台</p>
+    <p>1. 地點：8年8班教室（4樓過八角亭後左轉第4間教室）</p>
+    <p>2. 開放時間：11月15日（校慶日）10:30~12:00</p>
+    <p>3. 入場費：50元/人 3人以上45元/人</p>
+    <p>4. 聯絡方式：8年8班電話 分機808 或 現場服務台</p>
+  </div>
+  <div class="info">
+    <h3>⚠️ 注意事項</h3>
+    <p>1. 勿攻擊任何工作人員，違反者罰款500元<br>
+        2. 此次診療可能會有輕微的接觸(例：抓手)無法接受者請自行斟酌<br>
+        3. 請配合工作人員和指示牌的引導，請勿自行移動，<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;屢勸不聽者本院含有取消診療的權利<br>
+        4. 療程結束後有心理測驗一個，敬請期待<br>
+        5. 本院的驚嚇程度「不高」</p>
   </div>
 
   <div class="buttons">
