--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
   <div class="buttons">
     <button onclick="location.href='info.html'">活動資訊</button>
+    <button onclick="location.href='reservation.html'">即刻預約</button>
   </div>
 
   <footer>「第八精神病院」 — 校慶限定開放</footer>
