--- a/info.html
+++ b/info.html
@@ -186,6 +186,9 @@
         margin-top: 4rem;
       }
     }
+    .info a:visited{
+      color: rgb(0, 102, 255);
+    }
   </style>
 </head>
 
@@ -206,6 +209,8 @@
     <p>2. 開放時間：11月15日（校慶日）10:30~12:00</p>
     <p>3. 入場費：50元/人 3人以上45元/人</p>
     <p>4. 聯絡方式：8年8班電話 分機808 或 現場服務台</p>
+    <P>5. 入場費包含：鬼屋體驗、心理測驗一兩三、疾病配對遊戲</P>
+    <P style="color:rgb(0, 102, 255);"><a href="https://drive.google.com/file/d/17WAvYnFhHb0FrkLexYVlWsHUAvJXmQut/view?usp=sharing">心理測驗與疾病配對遊戲介紹</a></P>
   </div>
   <div class="info">
     <h3>⚠️ 注意事項</h3>
