--- a/story.html
+++ b/story.html
@@ -261,7 +261,7 @@
     function checkPassword() {
       const input = document.getElementById("passwordInput").value.trim();
       const error = document.getElementById("loginError");
-      if (input === "ilove808") {
+      if (input === "shuchingshih") {
         document.getElementById("loginScreen").style.display = "none";
         document.getElementById("startScreen").style.display = "block";
         error.style.display = "none";
